--- a/index.html
+++ b/index.html
@@ -98,6 +98,22 @@
     }
 
 
+    .leaflet-control-layers{
+        font-family: "Lato", sans-serif;
+        width: 100px;
+        background: rgba(0, 0, 0, 0.5);
+        color: #fff;
+        font-size: 1em;
+        font-weight: 700;
+        line-height: 1.4em;
+    }
+
+    .leaflet-popup, .leaflet-tooltip {
+        font-family: "Lato", sans-serif;
+        font-size: 1em;
+        line-height: 1.4em;
+    }
+
     
     
   </style>
