--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset=utf-8 />
-  <title>Price Lab</title>
+  <title>Herpetology Lab</title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css" />
   <!-- Is the is the latest version of Leaflet? -->
@@ -175,7 +175,7 @@
         projects to find out more about them!
       </p>
 
-      <p>Information from this map was collected from the <a href="https://pricelab.ca.uky.edu/">Price Lab</a></li>.
+      <p>Information from this map was collected from the <a href="https://pricelab.ca.uky.edu/research-topics-and-current-projects">Price Lab</a></li>.
         Additional information about individual projects can be found <a
           href="https://pricelab.ca.uky.edu/publications">here</a></li>.
       </p>
