--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
     //***********************************************************************
 
 
-<<<<<<< Updated upstream
+
     //Add county layer
     fetch("data/us-counties.json")
       .then(function (response) {
@@ -382,9 +382,7 @@
         }).addTo(map);
         // call to new function here gets the data out of the
         // callback function
-        // drawMap(dataLayer);
-        //Add states layer
-
+         drawMap(dataLayer);
       });
 
 
@@ -412,29 +410,28 @@
         }).addTo(map);
         // call to new function here gets the data out of the
         // callback function
-        //  drawMap(dataLayer2);
+          drawMap(dataLayer2);
 
-=======
-<<<<<<< HEAD
-//     //Add county layer
-    // fetch("data/us-counties.json")
-    //    .then(function (response) {
-    //      return response.json();
-    //    })
-    //    .then(function (counties) {
-    //      const dataLayer = L.geoJson(counties, {
-    //        style: function (feature) {
-    //          return {
-    //            color: "#dddddd",
-    //            weight: 0.1,
-    //            fillOpacity: 0,
-    //            fillColor: "#1f78b4",
-    //          };
-    //        },
-    //      }).addTo(map);
-    //      // call to new function here gets the data out of the
-    //      // callback function
-    //      drawMap(dataLayer);
+    //Add county layer
+     fetch("data/us-counties.json")
+        .then(function (response) {
+          return response.json();
+        })
+        .then(function (counties) {
+          const dataLayer = L.geoJson(counties, {
+            style: function (feature) {
+              return {
+                color: "#dddddd",
+                weight: 0.1,
+                fillOpacity: 0,
+                fillColor: "#1f78b4",
+    interactive: false,
+              };
+            },
+          }).addTo(map);
+          // call to new function here gets the data out of the
+          // callback function
+          drawMap(dataLayer);
          
     
     //    });
@@ -443,36 +440,6 @@
     //  function drawMap(dataLayer) {
     //    // we now have access to dataLayer here!
     //  }
-=======
-    //Add county layer
-    fetch("data/us-counties.json")
-      .then(function (response) {
-        return response.json();
-      })
-      .then(function (counties) {
-        const dataLayer = L.geoJson(counties, {
-          style: function (feature) {
-            return {
-              color: "#dddddd",
-              weight: 0.1,
-              fillOpacity: 0,
-              fillColor: "#1f78b4",
-              interactive: false,
-            };
-          },
-        }).addTo(map);
-        // call to new function here gets the data out of the
-        // callback function
-        // drawMap(dataLayer);
-        //Add states layer
-
-      });
-
-
-    // function drawMap(dataLayer) {
-    //   // we now have access to dataLayer here!
-    // }
->>>>>>> 31ea38065872d04e285db214740c5e3f6019c5c9
 
 
     //Add states layer
@@ -494,9 +461,9 @@
         }).addTo(map);
         // call to new function here gets the data out of the
         // callback function
-        //  drawMap(dataLayer2);
+          drawMap(dataLayer2);
 
->>>>>>> Stashed changes
+
       });
 
     //    function drawMap(dataLayer2) {
