--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
       </div>
       <div class="column">
-        <img src="images/Steve.JPG" class='picture' alt="Dr. Price in the field">
+        <img src="images/Steve.jpg" class='picture' alt="Dr. Price in the field">
         <div class="linkbox">
           <h3>Dr. Price looking for amphibians in West Virginia (2022)</h3>
         </div>
