--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       style: function (feature) {
         return {
           color: '#FFFFFF',
-          fillColor: '#00FFFF',
+          fillColor: '#CC5500',
           weight: 2,
           stroke: 1,
           fillOpacity: .8,
@@ -447,7 +447,7 @@
     var sourcesLayers = {
       "<b style='color:#0000FF'>Amphibians</b>": amphibianslayer,
       "<b style='color:#000000'>Reptiles</b>": reptileslayer,
-      "<b style='color:#00FFFF'>Mussels</b>": musselslayer
+      "<b style='color:#CC5500'>Mussels</b>": musselslayer
     }
 
 
@@ -497,7 +497,7 @@
       console.log(this)
       this.setStyle({
         color: "white",
-        fillColor: "brown"
+        fillColor: "yellow"
       })
     })
     //Re-sets style to blue
